tests/negative/computed_storage_public_param.ora
// Negative: callers cannot provide forged storage capabilities through public ABI.
contract BadComputedStoragePublicParam {
    pub fn bad(slot: StorageSlot) {
        _ = slot;
    }
}
